about us in progress, contact ended, header ready

--- a/pages/about_capabilities.html
+++ b/pages/about_capabilities.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>About ElectroPanel Pro - Engineering Excellence & Manufacturing
             Capabilities</title>
+        <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
         <meta name="description"
             content="Discover ElectroPanel Pro's 25+ years of electrical engineering excellence. Tour our facilities, meet our expert team, and explore our comprehensive manufacturing capabilities." />
         <link rel="stylesheet" href="../css/main.css" />
@@ -92,75 +93,7 @@
                         راه‌حل‌های مهندسی‌شده با دقت که عملیات حیاتی را در صنایع
                         مختلف به‌کار می‌اندازند.</p>
 
-                    <div
-                        class="flex flex-col sm:flex-row gap-4 justify-center mt-12">
-
-                        <!-- Card 1: Phone Number (Clickable) -->
-                        <div
-                            class="relative bg-white bg-opacity-10 rounded-lg backdrop-blur-sm border border-white/20 text-right w-full sm:w-auto transition-all duration-300 hover:bg-opacity-20 hover:border-white/40">
-                            <a href="tel:+982188543614" class="block p-6">
-                                <div
-                                    class="flex items-center justify-between mb-2">
-                                    <p
-                                        class="font-sans font-semibold text-lg">شماره
-                                        تماس</p>
-                                    <svg class="w-8 h-8 text-accent"
-                                        fill="currentColor" viewBox="0 0 20 20">
-                                        <path
-                                            d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
-                                    </svg>
-                                </div>
-                                <p class="opacity-80" dir="ltr">021-88543614 -
-                                    09123456789</p>
-                            </a>
-                        </div>
-
-                        <!-- Card 2: Email (NOW CLICKABLE) -->
-                        <div
-                            class="relative bg-white bg-opacity-10 rounded-lg backdrop-blur-sm border border-white/20 text-right w-full sm:w-auto transition-all duration-300 hover:bg-opacity-20 hover:border-white/40">
-                            <!-- WRAPPED content in an <a> tag with mailto: -->
-                            <a href="mailto:info@behsaztablo.ir"
-                                class="block p-6">
-                                <div
-                                    class="flex items-center justify-between mb-2">
-                                    <p
-                                        class="font-sans font-semibold text-lg">ایمیل</p>
-                                    <svg class="w-8 h-8 text-accent"
-                                        fill="currentColor" viewBox="0 0 20 20">
-                                        <path
-                                            d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
-                                        <path
-                                            d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
-                                    </svg>
-                                </div>
-                                <p class="opacity-80">info@behsaztablo.ir</p>
-                            </a>
-                        </div>
-
-                        <!-- Card 3: Location (Clickable) -->
-                        <div
-                            class="relative bg-white bg-opacity-10 rounded-lg backdrop-blur-sm border border-white/20 text-right w-full sm:w-auto transition-all duration-300 hover:bg-opacity-20 hover:border-white/40">
-                            <a
-                                href="https://www.google.com/maps/search/?api=1&query=Behsaz+Tablo+Asia+Tehran"
-                                target="_blank" rel="noopener noreferrer"
-                                class="block p-6">
-                                <div
-                                    class="flex items-center justify-between mb-2">
-                                    <p
-                                        class="font-sans font-semibold text-lg">دفتر
-                                        مرکزی</p>
-                                    <svg class="w-8 h-8 text-accent"
-                                        fill="currentColor" viewBox="0 0 20 20">
-                                        <path fill-rule="evenodd"
-                                            d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                </div>
-                                <p class="opacity-80">تهران، خیابان نیلوفر</p>
-                            </a>
-                        </div>
-
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -170,8 +103,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-16">
                     <h2
-                        class="text-display font-sans font-bold text-primary mb-4">مسیر
-                        ما</h2>
+                        class="text-display font-sans font-bold text-primary mb-4">خط زمانی</h2>
                     <p
                         class="text-body-lg text-secondary-600 max-w-3xl mx-auto">از
                         یک شرکت مهندسی کوچک تا تولیدکننده‌ای پیشرو در
@@ -661,173 +593,68 @@
             </div>
         </section>
 
-        <!-- Employee Spotlights -->
-        <section class="py-20 bg-surface">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="text-center mb-16">
-                    <h2
-                        class="text-display font-sans font-bold text-primary mb-4">Employee
-                        Spotlights</h2>
-                    <p
-                        class="text-body-lg text-secondary-600 max-w-3xl mx-auto">Meet
-                        the dedicated professionals whose expertise and
-                        commitment drive our success.</p>
-                </div>
+        <!-- Vision & Mission Section -->
+<section class="py-20 bg-surface">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <!-- Section Header -->
+        <div class="text-center mb-16">
+            <h2 class="text-display font-sans font-bold text-primary mb-4">چشم‌انداز و مأموریت ما</h2>
+            <p class="text-body-lg text-secondary-600 max-w-3xl mx-auto">اصول و ارزش‌هایی که مسیر ما را در ارائه برترین راه‌حل‌های مهندسی برق مشخص می‌کنند.</p>
+        </div>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                    <!-- Senior Engineer -->
-                    <div class="card-elevated">
-                        <div class="flex items-start space-x-6">
-                            <img
-                                src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=200"
-                                alt="James Wilson, Senior Electrical Engineer"
-                                class="w-24 h-24 rounded-full object-cover flex-shrink-0"
-                                onerror="this.src='https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?q=80&w=200&auto=format&fit=crop'; this.onerror=null;" />
-                            <div class="flex-1">
-                                <h3
-                                    class="text-heading font-sans font-bold text-primary mb-2">James
-                                    Wilson, P.E.</h3>
-                                <p
-                                    class="text-accent font-sans font-semibold mb-3">Senior
-                                    Electrical Engineer</p>
-                                <p class="text-secondary-600 mb-4">15 years with
-                                    ElectroPanel Pro, specializing in healthcare
-                                    and critical infrastructure projects. Led
-                                    the design team for our largest hospital
-                                    emergency power system.</p>
-                                <div class="bg-secondary-50 rounded-lg p-3">
-                                    <p
-                                        class="text-sm text-secondary-700 italic">"Every panel we design could be the difference between life and death in a hospital. That responsibility drives our attention to detail."</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-start">
 
-                    <!-- Manufacturing Supervisor -->
-                    <div class="card-elevated">
-                        <div class="flex items-start space-x-6">
-                            <img
-                                src="https://images.unsplash.com/photo-1494790108755-2616b332c1c2?q=80&w=200&auto=format&fit=crop&ixlib=rb-4.0.3"
-                                alt="Maria Garcia, Manufacturing Supervisor"
-                                class="w-24 h-24 rounded-full object-cover flex-shrink-0"
-                                onerror="this.src='https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=200'; this.onerror=null;" />
-                            <div class="flex-1">
-                                <h3
-                                    class="text-heading font-sans font-bold text-primary mb-2">Maria
-                                    Garcia</h3>
-                                <p
-                                    class="text-accent font-sans font-semibold mb-3">Manufacturing
-                                    Supervisor</p>
-                                <p class="text-secondary-600 mb-4">12 years
-                                    overseeing quality control and production
-                                    efficiency. Implemented lean manufacturing
-                                    processes that reduced production time by
-                                    30%.</p>
-                                <div class="bg-secondary-50 rounded-lg p-3">
-                                    <p
-                                        class="text-sm text-secondary-700 italic">"Quality isn't just about meeting specifications—it's about exceeding expectations and ensuring reliability for decades."</p>
-                                </div>
-                            </div>
-                        </div>
+            <!-- Our Vision Card -->
+            <div class="card-elevated">
+                <div class="flex items-center mb-6">
+                    <div class="bg-primary-50 rounded-full p-3 mr-4">
+                        <svg class="w-8 h-8 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+                        </svg>
                     </div>
+                    <h3 class="text-heading font-sans font-bold text-primary">چشم‌انداز ما</h3>
                 </div>
+                <p class="text-secondary-600 text-lg leading-relaxed">
+                    چشم‌انداز ما تبدیل شدن به معیار اصلی کیفیت و نوآوری در صنعت تابلو برق ایران و منطقه است. ما در تلاشیم تا با بهره‌گیری از تکنولوژی‌های روز دنیا و تکیه بر دانش فنی تیم متخصص خود، راه‌حل‌هایی پایدار و هوشمند ارائه دهیم که ایمنی و بهره‌وری را برای تمامی صنایع به ارمغان می‌آورد.
+                </p>
             </div>
-        </section>
 
-        <!-- Value Proposition -->
-        <section class="py-20 bg-primary text-white">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="text-center mb-16">
-                    <h2 class="text-display font-sans font-bold mb-6">Your
-                        Electrical Infrastructure Partners</h2>
-                    <p class="text-body-lg opacity-90 max-w-3xl mx-auto">We
-                        don't just manufacture panels—we build lasting
-                        partnerships that power your success for decades.</p>
-                </div>
-
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Long-term Relationships -->
-                    <div class="text-center">
-                        <div
-                            class="bg-white bg-opacity-10 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6">
-                            <svg class="w-8 h-8" fill="currentColor"
-                                viewBox="0 0 20 20">
-                                <path fill-rule="evenodd"
-                                    d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </div>
-                        <h3
-                            class="text-heading font-sans font-bold mb-4">Long-term
-                            Client Relationships</h3>
-                        <div class="text-4xl font-sans font-bold mb-2">85%</div>
-                        <p class="opacity-90">Client retention rate over 10+
-                            years</p>
+            <!-- Our Mission Card -->
+            <div class="card-elevated">
+                <div class="flex items-center mb-6">
+                    <div class="bg-accent-50 rounded-full p-3 mr-4">
+                        <svg class="w-8 h-8 text-accent" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                        </svg>
                     </div>
-
-                    <!-- Repeat Business -->
-                    <div class="text-center">
-                        <div
-                            class="bg-white bg-opacity-10 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6">
-                            <svg class="w-8 h-8" fill="currentColor"
-                                viewBox="0 0 20 20">
-                                <path fill-rule="evenodd"
-                                    d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </div>
-                        <h3 class="text-heading font-sans font-bold mb-4">Repeat
-                            Business</h3>
-                        <div class="text-4xl font-sans font-bold mb-2">70%</div>
-                        <p class="opacity-90">Of projects come from existing
-                            clients</p>
-                    </div>
-
-                    <!-- Partnership Approach -->
-                    <div class="text-center">
-                        <div
-                            class="bg-white bg-opacity-10 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6">
-                            <svg class="w-8 h-8" fill="currentColor"
-                                viewBox="0 0 20 20">
-                                <path
-                                    d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
-                            </svg>
-                        </div>
-                        <h3
-                            class="text-heading font-sans font-bold mb-4">Partnership
-                            Approach</h3>
-                        <div class="text-4xl font-sans font-bold mb-2">25+</div>
-                        <p class="opacity-90">Years of trusted partnerships</p>
-                    </div>
+                    <h3 class="text-heading font-sans font-bold text-primary">مأموریت ما</h3>
                 </div>
-
-                <div class="text-center mt-12">
-                    <a href="contact_quote_request.html"
-                        class="btn-accent text-lg px-8 py-4">Start Your
-                        Partnership Today</a>
-                </div>
+                <p class="text-secondary-600 text-lg leading-relaxed">
+                    مأموریت ما طراحی، تولید و ارائه تابلوهای برق فشار ضعیف و متوسط با بالاترین سطح کیفیت و مطابق با استانداردهای جهانی است. ما متعهد به ارائه خدمات مهندسی دقیق، پشتیبانی فنی قابل اعتماد و جلب رضایت کامل مشتریان خود از طریق نوآوری مستمر و بهبود فرآیندها هستیم.
+                </p>
             </div>
-        </section>
 
-        <!-- Call to Action -->
+        </div>
+    </div>
+</section>
+
+
         <section class="py-20 bg-white">
             <div class="max-w-4xl mx-auto text-center px-4 sm:px-6 lg:px-8">
                 <h2
-                    class="text-display font-sans font-bold text-primary mb-6">Ready
-                    to Experience the ElectroPanel Pro Difference?</h2>
-                <p class="text-body-lg text-secondary-600 mb-8">Discover how our
-                    engineering excellence, manufacturing capabilities, and
-                    partnership approach can power your next project.</p>
+                    class="text-display font-sans font-bold text-primary mb-6">پروژه‌تان
+                    را به ما بسپارید</h2>
+                <p class="text-body-lg text-secondary-600 mb-8">از ایده تا پیاده‌سازی؛ تیم تخصصی مهندسی ما آماده است تا با برترین کیفیت نیازهای شما را برآورده سازد.</p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <a href="contact_quote_request.html"
-                        class="btn-accent text-lg px-8 py-4">Request
-                        Consultation</a>
-                    <a href="project_portfolio.html"
-                        class="btn-secondary text-lg px-8 py-4">View Our
-                        Projects</a>
+                        class="btn-accent text-lg px-8 py-4">ثبت درخواست</a>
+                    <a href="about_capabilities.html"
+                        class="btn-secondary text-lg px-8 py-4">مطالعه توانایی‌های ما</a>
                 </div>
             </div>
         </section>
+
 
         <!-- Footer -->
         <footer class="bg-secondary-900 text-white py-16">
