--- a/pages/custom_panel_design.html
+++ b/pages/custom_panel_design.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Custom Panel Design - ElectroPanel Pro | Precision-Engineered
             Electrical Solutions</title>
+        <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
         <meta name="description"
             content="Custom electrical panel design services from ElectroPanel Pro. Interactive configurator, expert engineering team, and comprehensive design process for mission-critical applications." />
         <link rel="stylesheet" href="../css/main.css" />
