--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ElectroPanel Pro - Industrial Electrical Panel Manufacturing &
             Engineering</title>
+        <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
         <meta name="description"
             content="ElectroPanel Pro delivers precision-engineered electrical panels for critical infrastructure. 25+ years experience, 500+ projects, zero safety incidents. ثبت درخواست today." />
         <link rel="stylesheet" href="../css/main.css" />
