--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -182,7 +182,7 @@
                 <div
                     class="carousel-slide active absolute inset-0 w-full h-full">
                     <img
-                        src="../assets/images/apply-bg.jpg"
+                        src="../assets/images/abadan.webp"
                         alt="Hospital emergency power system installation"
                         class="w-full h-full object-cover"
                         onerror="this.src='https://images.pexels.com/photos/236380/pexels-photo-236380.jpeg?auto=compress&cs=tinysrgb&w=2940'; this.onerror=null;" />
@@ -192,16 +192,14 @@
                         class="absolute inset-0 flex items-center justify-center">
                         <div class="text-center text-white max-w-4xl px-4">
                             <h1
-                                class="text-hero font-sans font-bold mb-6">پروژه خفن پتروشیمی</h1>
-                            <p class="text-xl mb-4 font-sans">2,500 amp
-                                emergency service installation</p>
+                                class="text-hero font-sans font-semibold mb-6 text-white">پروژه نیروگاه آبادان</h1>
+                            <p class="text-xl mb-4 font-sans">Low-Voltage Sivacon / Medium-Voltage Kiosk 33Kv</p>
                             <p class="text-lg mb-8 opacity-90">Ensuring 99.99%
                                 uptime for life-critical systems</p>
                             <div
                                 class="flex flex-col sm:flex-row gap-4 justify-center">
-                                <a href="contact_quote_request.html"
-                                    class="btn-accent text-lg px-8 py-4">ثبت
-                                    درخواست</a>
+                                <a href="about_capabilities.html"
+                                    class="btn-accent text-lg px-8 py-4">درباره ما</a>
                                 <a href="project_portfolio.html"
                                     class="bg-white text-primary font-sans font-semibold px-8 py-4 rounded-lg hover:bg-secondary-50 transition-colors">مشاهده
                                     پروژه‌ها</a>
@@ -214,7 +212,7 @@
                 <div
                     class="carousel-slide absolute inset-0 w-full h-full opacity-0">
                     <img
-                        src="../assets/images/apply-bg.jpg"
+                        src="../assets/images/zarafshan.webp"
                         alt="Manufacturing facility main distribution center"
                         class="w-full h-full object-cover"
                         onerror="this.src='https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?q=80&w=2940&auto=format&fit=crop'; this.onerror=null;" />
@@ -224,16 +222,14 @@
                         class="absolute inset-0 flex items-center justify-center">
                         <div class="text-center text-white max-w-4xl px-4">
                             <h1
-                                class="text-hero font-sans font-bold mb-6">پروژه خفن عمرانی</h1>
-                            <p class="text-xl mb-4 font-sans">5,000 amp main
-                                distribution upgrade</p>
+                                class="text-hero font-sans font-semibold mb-6 text-white">پروژه ساختمانی پارسیان زرافشان</h1>
+                            <p class="text-xl mb-4 font-sans">Low-Voltage Sivacon 8PT 2500A</p>
                             <p class="text-lg mb-8 opacity-90">Zero downtime
                                 installation during operational hours</p>
                             <div
                                 class="flex flex-col sm:flex-row gap-4 justify-center">
-                                <a href="contact_quote_request.html"
-                                    class="btn-accent text-lg px-8 py-4">ثبت
-                                    درخواست</a>
+                                <a href="about_capabilities.html"
+                                    class="btn-accent text-lg px-8 py-4">درباره ما</a>
                                 <a href="project_portfolio.html"
                                     class="bg-white text-primary font-sans font-semibold px-8 py-4 rounded-lg hover:bg-secondary-50 transition-colors">مشاهده
                                     پروژه‌ها</a>
@@ -246,25 +242,23 @@
                 <div
                     class="carousel-slide absolute inset-0 w-full h-full opacity-0">
                     <img
-                        src="../assets/images/apply-bg.jpg"
+                        src="../assets/images/iranmal.webp"
                         alt="Data center critical infrastructure setup"
                         class="w-full h-full object-cover"
                         onerror="this.src='https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=2940&auto=format&fit=crop'; this.onerror=null;" />
-                    <div class="absolute inset-0 bg-accent bg-opacity-60"></div>
+                    <div class="absolute inset-0 bg-slate-600 bg-opacity-60"></div>
                     <div
                         class="absolute inset-0 flex items-center justify-center">
                         <div class="text-center text-white max-w-4xl px-4">
                             <h1
-                                class="text-hero font-sans font-bold mb-6">پروژه خفن بیمارستانی</h1>
-                            <p class="text-xl mb-4 font-sans">Redundant power
-                                distribution system</p>
+                                class="text-hero font-sans font-semibold mb-6 text-white">پروژه ایران مال</h1>
+                            <p class="text-xl mb-4 font-sans">Low-Voltage Sivacno 8PT 2000A</p>
                             <p class="text-lg mb-8 opacity-90">72-hour emergency
                                 completion guarantee</p>
                             <div
                                 class="flex flex-col sm:flex-row gap-4 justify-center">
-                                <a href="contact_quote_request.html"
-                                    class="btn-primary text-lg px-8 py-4">ثبت
-                                    درخواست</a>
+                                <a href="about_capabilities.html"
+                                    class="btn-primary text-lg px-8 py-4">درباره ما</a>
                                 <a href="project_portfolio.html"
                                     class="bg-white text-primary font-sans font-semibold px-8 py-4 rounded-lg hover:bg-secondary-50 transition-colors">مشاهده
                                     پروژه‌ها</a>
@@ -275,7 +269,7 @@
             </div>
 
             <!-- Carousel Navigation -->
-            <div
+            <!-- <div
                 class="absolute bottom-8 left-1/2 transform -translate-x-1/2 flex gap-x-6">
                 <button
                     class="carousel-dot w-3 h-3 rounded-full bg-white bg-opacity-50 hover:bg-opacity-75 transition-all"
@@ -286,10 +280,10 @@
                 <button
                     class="carousel-dot w-3 h-3 rounded-full bg-white bg-opacity-50 hover:bg-opacity-75 transition-all"
                     onclick="currentSlide(3)"></button>
-            </div>
+            </div> -->
 
             <!-- Carousel Arrows -->
-            <button
+            <!-- <button
                 class="absolute left-4 top-1/2 transform -translate-y-1/2 text-white hover:text-accent transition-colors"
                 onclick="plusSlides(-1)">
                 <svg class="w-8 h-8" fill="none" stroke="currentColor"
@@ -306,7 +300,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round"
                         stroke-width="2" d="M9 5l7 7-7 7" />
                 </svg>
-            </button>
+            </button> -->
         </section>
 
         <!-- Trust Bar Section -->
@@ -317,7 +311,7 @@
                     <div class="text-center">
                         <div class="flex justify-center mb-3">
                             <img
-                                src="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?q=80&w=100&auto=format&fit=crop"
+                                src="../assets/images/anjomansenfi.webp"
                                 alt="UL Certification" class="h-12 w-auto"
                                 onerror="this.src='https://images.pexels.com/photos/6801648/pexels-photo-6801648.jpeg?auto=compress&cs=tinysrgb&w=100'; this.onerror=null;" />
                         </div>
@@ -328,7 +322,7 @@
                     <div class="text-center">
                         <div class="flex justify-center mb-3">
                             <img
-                                src="https://images.pixabay.com/photo/2017/06/10/07/18/list-2389219_1280.png?auto=compress&cs=tinysrgb&w=100"
+                                src="../assets/images/anjomansenfi.webp"
                                 alt="NEMA Certification" class="h-12 w-auto"
                                 onerror="this.src='https://images.unsplash.com/photo-1560472354-b33ff0c44a43?q=80&w=100&auto=format&fit=crop'; this.onerror=null;" />
                         </div>
@@ -339,7 +333,7 @@
                     <div class="text-center">
                         <div class="flex justify-center mb-3">
                             <img
-                                src="https://images.pexels.com/photos/8566473/pexels-photo-8566473.jpeg?auto=compress&cs=tinysrgb&w=100"
+                                src="../assets/images/anjomansenfi.webp"
                                 alt="IEEE Standards" class="h-12 w-auto"
                                 onerror="this.src='https://images.pixabay.com/photo/2017/06/10/07/18/list-2389219_1280.png'; this.onerror=null;" />
                         </div>
@@ -348,14 +342,11 @@
                             Test</p>
                     </div>
                     <div class="text-center">
-                        <div
-                            class="bg-success-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
-                            <svg class="w-8 h-8 text-success-600"
-                                fill="currentColor" viewBox="0 0 20 20">
-                                <path fill-rule="evenodd"
-                                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                                    clip-rule="evenodd" />
-                            </svg>
+                        <div class="flex justify-center mb-3">
+                            <img
+                                src="../assets/images/anjomansenfi.webp"
+                                alt="IEEE Standards" class="h-12 w-auto"
+                                onerror="this.src='https://images.pixabay.com/photo/2017/06/10/07/18/list-2389219_1280.png'; this.onerror=null;" />
                         </div>
                         <p
                             class="text-sm font-sans font-semibold text-secondary-700">ISO
@@ -383,7 +374,7 @@
 
                     <!-- Custom Panel Design -->
                     <div
-                        class="card-elevated text-center group hover:shadow-industrial transition-all flex flex-col h-full">
+                        class="card-elevated text-right group hover:shadow-industrial transition-all flex flex-col h-full">
                         <div
                             class="bg-primary-50 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 group-hover:bg-primary-100 transition-colors">
                             <svg
@@ -414,9 +405,7 @@
                             فشار ضعیف Sivacon</h3>
                         <!-- ADDED flex-grow HERE -->
                         <p
-                            class="text-secondary-600 mb-6 flex-grow">Precision-engineered
-                            panels tailored to your exact specifications and
-                            operational requirements.</p>
+                            class="text-secondary-600 mb-6 flex-grow">تابلوهای فشار ضعیف سیواکِن (SIVACON) محصولات شرکت زیمنس هستند که به عنوان سیستم‌های مدرن و مقرون به صرفه برای توزیع برق و کنترل مرکزی موتور (MCC) شناخته می‌شوند. این تابلوها استانداردهای جهانی را برای توزیع برق در زیرساخت‌ها تعیین کرده‌اند، تا 7000 آمپر را پوشش می‌دهند و ایمنی بالایی برای پرسنل و تجهیزات فراهم می‌کنند. طراحی مدولار و بهینه آن‌ها، قابلیت انعطاف‌پذیری برای تطابق با نیازهای مختلف را داراست</p>
                         <!-- REMOVED mt-auto HERE -->
                         <a href="custom_panel_design.html"
                             class="text-accent font-sans font-semibold hover:text-accent-700 transition-colors">مطالعه
@@ -425,7 +414,7 @@
 
                     <!-- Standard Products -->
                     <div
-                        class="card-elevated text-center group hover:shadow-industrial transition-all flex flex-col h-full">
+                        class="card-elevated text-right group hover:shadow-industrial transition-all flex flex-col h-full">
                         <div
                             class="bg-secondary-50 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 group-hover:bg-secondary-100 transition-colors">
                             <svg
@@ -458,9 +447,7 @@
                             فشار متوسط کامپکت</h3>
                         <!-- ADDED flex-grow HERE -->
                         <p
-                            class="text-secondary-600 mb-6 flex-grow">Pre-engineered
-                            solutions for common applications with proven
-                            reliability and quick delivery.</p>
+                            class="text-secondary-600 mb-6 flex-grow">تابلوهای فشار متوسط کامپکت، نسل جدید تابلوهای برق هستند که با حجم کمتر نسبت به تابلوهای سنتی، ایمنی و اطمینان بالاتری را ارائه می‌دهند . این تابلوها از نوع AIS یا Air Insulated Switch هستند و با استفاده از هوا به عنوان عایق، به صورت مدولار و در محفظه‌های جداگانه با ابعاد استاندارد ساخته می‌شوند . وظیفه اصلی آن‌ها کنترل، توزیع و حفاظت از انرژی الکتریکی در شبکه‌های فشار متوسط است</p>
                         <!-- REMOVED mt-auto HERE -->
                         <a href="project_portfolio.html"
                             class="text-accent font-sans font-semibold hover:text-accent-700 transition-colors">مطالعه
@@ -469,7 +456,7 @@
 
                     <!-- Engineering Services -->
                     <div
-                        class="card-elevated text-center group hover:shadow-industrial transition-all flex flex-col h-full">
+                        class="card-elevated text-right group hover:shadow-industrial transition-all flex flex-col h-full">
                         <div
                             class="bg-accent-50 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 group-hover:bg-accent-100 transition-colors">
                             <svg
@@ -500,9 +487,7 @@
                             فشار متوسط کشویی</h3>
                         <!-- ADDED flex-grow HERE -->
                         <p
-                            class="text-secondary-600 mb-6 flex-grow">Comprehensive
-                            design, testing, and commissioning services from
-                            concept to completion.</p>
+                            class="text-secondary-600 mb-6 flex-grow">تابلوهای فشار متوسط کشویی تجهیزات توزیع برق در ولتاژ متوسط (معمولاً تا 36 کیلو ولت) هستند که برای اطمینان و ایمنی بالا، با ماژول‌های جداگانه (کشویی) و محافظت‌های فلزی (Metal-clad) طراحی می‌شوند . این تابلوها در صنایع مختلف مانند نیروگاه‌ها، مراکز داده و شبکه‌های توزیع برق شهری کاربرد دارند و امکان دسترسی آسان از جلو برای نصب و نگهداری را فراهم می‌کنند</p>
                         <!-- REMOVED mt-auto HERE -->
                         <a href="about_capabilities.html"
                             class="text-accent font-sans font-semibold hover:text-accent-700 transition-colors">مطالعه
@@ -511,7 +496,7 @@
 
                     <!-- Emergency Support -->
                     <div
-                        class="card-elevated text-center group hover:shadow-industrial transition-all flex flex-col h-full">
+                        class="card-elevated text-right group hover:shadow-industrial transition-all flex flex-col h-full">
                         <div
                             class="bg-error-50 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 group-hover:bg-error-100 transition-colors">
                             <svg
@@ -543,9 +528,7 @@
                             class="text-heading font-sans font-bold text-primary mb-4">تابلوهای
                             فشار ضعیف کشویی</h3>
                         <!-- ADDED flex-grow HERE -->
-                        <p class="text-secondary-600 mb-6 flex-grow">24/7
-                            emergency response with rapid deployment for
-                            critical infrastructure failures.</p>
+                        <p class="text-secondary-600 mb-6 flex-grow">تابلوهای فشار ضعیف کشویی نوعی تابلو برق هستند که به دلیل قابلیت جداسازی و تعویض آسان قطعات و مدارهای داخلی، در صنایع بزرگ مانند پتروشیمی، نیروگاه‌ها و فولاد کاربرد دارند . این تابلوها فضای کمتری اشغال کرده، نگهداری و تعمیرات را تسهیل می‌کنند و به توزیع و کنترل ایمن انرژی الکتریکی در سیستم‌های پیچیده کمک می‌کنند </p>
                         <!-- REMOVED mt-auto HERE -->
                         <a href="contact_quote_request.html"
                             class="text-accent font-sans font-semibold hover:text-accent-700 transition-colors">مطالعه
@@ -685,15 +668,15 @@
                         class="card-elevated group hover:shadow-industrial transition-all h-full flex flex-col">
                         <div class="relative overflow-hidden rounded-lg mb-6">
                             <img
-                                src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3"
+                                src="../assets/images/mofateh.webp"
                                 alt="Data center redundant power systems"
                                 class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300"
                                 onerror="this.src='https://images.pexels.com/photos/325229/pexels-photo-325229.jpeg?auto=compress&cs=tinysrgb&w=800'; this.onerror=null;" />
                             <div
-                                class="absolute top-4 left-4 bg-secondary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">حفاظت</div>
+                                class="absolute top-4 left-4 bg-secondary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">پتروشیمی</div>
                         </div>
                         <h3
-                            class="text-heading font-sans font-bold text-primary mb-3 flex-grow">شهرسازه</h3>
+                            class="text-heading font-sans font-bold text-primary mb-3 flex-grow">احداث تصفیه‌خانه آب سد گلال پالایشگاه گاز ایلام</h3>
                         <p class="text-secondary-600 mb-4">تابلو LV Switchgear
                             (تابلوی برق فشار ضعیف) یک سیستم فلزی است که تجهیزات
                             الکتریکی مانند قطع‌کننده‌ها، کلیدها، و مدارشکن‌ها را
@@ -853,7 +836,7 @@
         </section>
 
         <!-- Call to Action Section -->
-        <section class="py-20 bg-white">
+        <section class="pb-20 bg-white">
             <div class="max-w-4xl mx-auto text-center px-4 sm:px-6 lg:px-8">
                 <h2
                     class="text-display font-sans font-bold text-primary mb-6">پروژه‌تان
